trying ti connect db